--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-uvicorn==0.24.0
-pydantic==2.5.0
-aiohttp==3.9.1
-mcp==1.0.0
-typing-extensions==4.8.0
-Python-multipart==0.0.6
-anyio==4.0.0
+fastmcp==0.3.0
+markdownify==0.13.1
+readabilipy==0.2.0
+httpx==0.27.2
+pydantic==2.8.2
+pypdf==5.0.1
+anyio==4.6.0
